log
Thu 24 Aug 2023 08:14:44 PM UTC: 
 list.c | 38 ++++++++++++++++++++------------------
 1 file changed, 20 insertions(+), 18 deletions(-)
 tests:  0|0
785a91f
Thu 24 Aug 2023 08:16:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8e47131
Thu 24 Aug 2023 08:16:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7fdb517
Thu 24 Aug 2023 08:17:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
96b262f
Thu 24 Aug 2023 08:18:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
af48209
Thu 24 Aug 2023 08:18:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7f48796
Thu 24 Aug 2023 08:22:24 PM UTC: 
 list.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:56:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   56 |   if (list->head = NULL)
      |       ^~~~
list.c:60:9: error: ‘last’ is used uninitialized [-Werror=uninitialized]
   60 |   Node* last;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
f38a39e
Thu 24 Aug 2023 08:22:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c8b48e6
Thu 24 Aug 2023 08:23:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a72317e
Thu 24 Aug 2023 08:23:45 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|5
total_score: 10/70
a704358
